Fix GraphQL with Jackson (#496)
Closes #489
Closes #462

---------

Co-authored-by: Sergio del Amo <sergio.delamo@softamo.com>