@@ -16,9 +16,19 @@ class GraphQLJacksonSerializationTest {
 
     @Test
     void serializeGraphQLResponseBody(JsonMapper mapper) throws IOException {
-        Map<String, Object> specification = Collections.singletonMap("foo", "bar");
+        Map<String, Object> specification = Map.of("foo", "bar");
         var response = new GraphQLResponseBody(specification);
-        var expected = "{\"foo\":\"bar\"}";
+        var expected = """
+            {"foo":"bar"}""";
+        assertEquals(expected, mapper.writeValueAsString(response));
+    }
+
+    @Test
+    void serializeEmptyGraphQLResponseBody(JsonMapper mapper) throws IOException {
+        Map<String, Object> specification = Map.of("foo", Map.of("bar", Collections.emptyList()));
+        var response = new GraphQLResponseBody(specification);
+        var expected = """
+            {"foo":{"bar":[]}}""";
         assertEquals(expected, mapper.writeValueAsString(response));
     }
 }
